[gd_scene load_steps=5 format=2]

[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://dodge_assets/art/coeur.png" type="Texture" id=2]
[ext_resource path="res://HUD.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="LifeImg" type="TextureRect" parent="."]
margin_left = 72.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 72.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeCount" type="Label" parent="."]
margin_left = 16.0
margin_right = 61.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -172.0
margin_right = -12.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -170.0
margin_bottom = -11.0
custom_fonts/font = SubResource( 1 )
text = "Dodge The Creeps !"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyBtn" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 128.0
margin_top = 185.0
margin_right = -116.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 1 )
text = "Ready"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="ReadyBtn" to="." method="_on_ReadyBtn_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
